--- a/docs/apzvalga/linchpin.tex
+++ b/docs/apzvalga/linchpin.tex
@@ -2,7 +2,7 @@ Interneto grafo savybėmis naudojamasi ir straipsnyje \kclong{linchpins}. Čia a
 
 Kertinės svetainės straipsnyje \cite{linchpins} yra apibrėžiami kaip dedikuoti serveriai kurie yra būtini kenksmingų internetinių svetainių veikimui. Šie serveriai talpina svetaines, kurios pasiekiamos tik iš kenkėjiškų svetainių ir yra skirti valdyti įvairias kenksmingas veiklas nukreipiant naudotojų srautus. Šiuos tinklo ramsčius aptikti ir sustabdyti yra svarbu dėl vykdomo veiklos masto -- jie gyvuoja daug ilgiau nei įprastos kenksmingos svetainės, apdorojami dideli duomenų kiekiai, dėl to jų sustabdymas labiau sutrikdo žalingą veiklą. Sprendžiama šių ramsčių aptikimo problema.
 
-Svetainės kurias stengiamasi aptikti pasižymi tam tikromis topologinėmis savybėmis grafe. Interneto svetaines galima skaidyti į dvi klases - kenksmingos ir nekenksmingos svetainės. Ramstinių serverių tikslas yra nukreipti naudotojus į kitas kenksmingas svetaines, kur bus bandoma monetizuoti naudotojus. Tai vaizduojama \ktufigref{images/linchpin.png}. Čia tinklapiai A, B, C yra kenksmingi tinklapiai kurie yra skirti pritraukti naudotojų dėmesį. Jie gali būti įterpiami į nekenksmingas svetaines įsilaužus ar naudojant apgaulingas reklamas \cite{tax}. Naudotojai iš jų yra nukreipiami į tarpinį, srauto paskirstymo tinklapį. Šis tinklapis vėl naudotojus automatiškai nukreipia į tolimesnius tinklalapius, kur bus bandoma iš jų pasipelnyti, ar verčiant ką nors nusipirkti, bandant išvilioti asmeninius duomenis ar kita. Ši ramstinių serverių paskirtis, srauto paskirstymas lemia tai, kad ramstiniai serveriai neturi jokių tiesioginių ryšių iš nekenksmingų svetainių. Visi ryšiai ateina tik iš kenksmingų svetainių. \cite{linchpins}. Tokia topologinė struktūra interneto grafe leidžia juos ranguoti naudojant PageRank algoritmą ir tikėtis aukšto rango.
+Svetainės kurias stengiamasi aptikti pasižymi tam tikromis topologinėmis savybėmis grafe. Interneto svetaines galima skaidyti į dvi klases - kenksmingos ir nekenksmingos svetainės. Ramstinių serverių tikslas yra nukreipti naudotojus į kitas kenksmingas svetaines, kur bus bandoma monetizuoti naudotojus. Tai vaizduojama paveiksle \ktufigref{images/linchpin.png}. Čia tinklapiai A, B, C yra kenksmingi tinklapiai kurie yra skirti pritraukti naudotojų dėmesį. Jie gali būti įterpiami į nekenksmingas svetaines įsilaužus ar naudojant apgaulingas reklamas \cite{tax}. Naudotojai iš jų yra nukreipiami į tarpinį, srauto paskirstymo tinklapį. Šis tinklapis vėl naudotojus automatiškai nukreipia į tolimesnius tinklalapius, kur bus bandoma iš jų pasipelnyti, ar verčiant ką nors nusipirkti, bandant išvilioti asmeninius duomenis ar kita. Ši ramstinių serverių paskirtis, srauto paskirstymas lemia tai, kad ramstiniai serveriai neturi jokių tiesioginių ryšių iš nekenksmingų svetainių. Visi ryšiai ateina tik iš kenksmingų svetainių. \cite{linchpins}. Tokia topologinė struktūra interneto grafe leidžia juos ranguoti naudojant PageRank algoritmą ir tikėtis aukšto rango.
 
 \ktufigure{images/linchpin.png}{10 cm}{Vartotojų srauto paskirstymo schema}
 
