--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -75,7 +75,7 @@ tinklalapius.
 Pirmoje darbo dalyje yra pateikiama klasifikavimo metodų bei kenksmingų tinklalapių tyrinėjimo literatūros apžvalga.
 Antroje dalyje pateikiama metodika kenksmingų ir nekenksmingų tinklalapių klasifikavimui, suformuojant mašininio
 mokymo modelius. Trečiojoje dalyje yra aprašomas ir apmokomas modelis, pateikiama programinė įranga šio modelio
-praktiniam panaudojimui. Kritiškai įvertinamas praktinis įrankio panaudojimas. Apžvelgiamos geros
+praktiniam panaudojimui, kritiškai įvertinamas praktinis įrankio panaudojimas.
 
 \newpage
 
